Improve Handbook ToC readability.  Adjust link colors based on http://en.wikipedia.org/wiki/Help:Link_color.  This makes links less garish and less distracting when near plain text.
PR:		docs/186857
Submitted by:	Allan Jude <freebsd@allanjude.com>


git-svn-id: svn+ssh://svn.freebsd.org/doc/head@44330 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/share/misc/docbook.css
+++ b/share/misc/docbook.css
@@ -34,6 +34,16 @@
   font-weight: bold;
 }
 
+a:link {
+	color:#0645AD;
+	text-decoration: underline;
+}
+
+a:visited, a:hover, a:active {
+	color:#663366;
+	text-decoration: underline;
+}
+
 div.blockquote-title {
   font-weight: bold;
   margin-top: 1em;
