- Revert verbatim line numbering changes since they broke callouts and   other inline markup
PR:		docs/187773
Submitted by:	Allan Jude <freebsd@allanjude.com>


git-svn-id: svn+ssh://svn.freebsd.org/doc/head@44350 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/share/misc/docbook.css
+++ b/share/misc/docbook.css
@@ -275,46 +275,23 @@ html {
 	text-decoration: underline;
 }
 
-.screen {
-	white-space: pre-wrap;
+pre.screen {
+	white-space: pre;
+	overflow: auto;
 	font-family: monospace;
 	padding: 1ex;
 	background-color: #edc;
-	border-style: solid;
-	border-color: #EEB985;
-	border-width: 0 0 0 2.5em;
-	border-radius: 6px;
-	counter-reset: code;
+	border: 1px solid #ccc;
 }
 
-.programlisting {
-	white-space: pre-wrap;
+pre.programlisting {
+	white-space: pre;
+	overflow: auto;
 	font-family: monospace;
 	padding: 1ex;
 	background-color: #eee;
-	border-style: solid;
-	border-color: #BABABA;
-	border-width: 0 0 0 2.5em;
+	border: 1px solid #ccc;
 	border-radius: 6px;
-	counter-reset: code;
-}
-
-span.verbatim {
-	counter-increment: code;
-	display: block;
-	padding: 0 0.5em 0 3.75em;
-	position: relative;
-	margin: 0 -0.3em 0 -3.85em;
-	overflow: hidden;
-}
-
-span.verbatim:before {
-	width: 3em;
-	text-align: right;
-	content: counter(code);
-	position: absolute;
-	left: 0;
-	color: #404040;
 }
 
 @media screen {  /* hide from IE3 */
@@ -408,7 +385,7 @@ span.verbatim:before {
 	font-weight: bold;
 }
 
-.screen strong {
+pre.screen strong {
 	font-weight: normal;
 }
 
