Pull in stylization for span.contrib class.
Approved by:	re (implicit)
Sponsored by:	The FreeBSD Foundation


git-svn-id: svn+ssh://svn.freebsd.org/doc/head@45088 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/releases/9.3R/docbook.css
+++ b/en_US.ISO8859-1/htdocs/releases/9.3R/docbook.css
@@ -206,3 +206,8 @@ BLOCKQUOTE.WARNING {
         padding-left: 1em;
         padding-right: 1em;
 }
+
+span.contrib {
+	font-size: small;
+	font-style: italic;
+}
