Add a link to the FreeBSD Journal.
Requested by:	anne, deb
Sponsored by:	The FreeBSD Foundation


git-svn-id: svn+ssh://svn.freebsd.org/doc/head@45134 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/layout/css/text.css
+++ b/en_US.ISO8859-1/htdocs/layout/css/text.css
@@ -95,6 +95,16 @@ h4 {
   padding-left: 5px;
 }
 
+#txtfrontjournalblock {
+  padding-left: 0px;
+}
+
+#txtfrontjournallink {
+  font-size: 1.2em;
+  font-weight: bold;
+  padding-left: 1px;
+}
+
 /* Link Styles */
 
 a:link                          { color:#990000; text-decoration: underline; }
