e a serif font when printing.
Discussed on:	-doc (about 18 months ago)


git-svn-id: svn+ssh://svn.freebsd.org/doc/head@45418 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/share/misc/docbook.css
+++ b/share/misc/docbook.css
@@ -117,7 +117,14 @@ body address {
 html body {
 	margin: 1em 8% 1em 10%;
 	line-height: 1.2;
-	font-family: sans-serif;
+}
+
+@media screen {
+	html body { font-family: sans-serif; }
+}
+
+@media print {
+	html body { font-family: serif; }
 }
 
 .legalnotice {
